infrastructure/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: develop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
    spec:
      containers:
        - name: nginx
          image: lscr.io/linuxserver/nginx:latest
          ports:
            - containerPort: 80
              hostPort: 8080
