infrastructure/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: develop
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  selector:
    app: nginx
  sessionAffinity: None
  type: ClusterIP
