infrastructure/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: develop
spec:
  rules:
    - host: develop-gc.ddns.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
  tls:
  - hosts:
    - nginx
    secretName: ssl-cert-develop
  ingressClassName: traefik
